--- a/Website.css
+++ b/Website.css
@@ -1,4 +1,18 @@
+body{
+    margin: 0;
+    min-height: 50vh;
+    display: flex;
+    flex-direction: column;
+}
+
 .image-container img{
     width: 300px;
     border-radius: 10px;
+}
+
+.image-container {
+    position: fixed;
+    bottom: 20;
+    padding: 30vh 20px;
+   
 }
