--- a/Website.css
+++ b/Website.css
@@ -1,28 +1,45 @@
-body{
-    margin: 0;
-    min-height: 50vh;
-    display: flex;
-    flex-direction: column;
-}
+body{ 
+    margin: 0; 
+    min-height: 50vh; 
+    display: flex; 
+    flex-direction: column; 
+} 
 
-.image-container img{
-    width: 250px;
-    border-radius: 10px;
-}
-
-.image-container {
-    position: fixed;
-    bottom: 20;
-    padding: 20vh 70px;
-   
-}
-.box{
-    background-color: rgb(255, 153, 0);
-    width: 30px;
-    height: 30px;
-    border-radius:100px;
-    top:70%;
-    left: 50%;
-    position:fixed;
+.image-container img{ 
+    width: 250px; 
+    border-radius: 10px; 
     
+} 
+
+.image-container { 
+    position: fixed; 
+    left: 5%;
+    padding: 20vh 70px; 
+} 
+.circle{ 
+    background-color: rgb(255, 153, 0); 
+    width: 30px; 
+    height: 30px; 
+    border-radius:100px; 
+    top:70%; 
+    left: 50%; 
+    position:fixed; 
+} 
+.circle1 { 
+    background-color: orange; 
+    width: 20px; 
+    height: 20px; 
+    border-radius: 100px; 
+    top: 15%; 
+    left: 20%; 
+    position:fixed; 
+} 
+.circle2{ 
+    background-color: orange; 
+    width: 20px; 
+    height: 20px; 
+    border-radius: 100px; 
+    top: 30%; 
+    left: 5%; 
+    position:fixed;
 }
