--- a/Website.css
+++ b/Website.css
@@ -1,9 +1,54 @@
-body{ 
+    body{ 
     margin: 0; 
-    min-height: 50vh; 
+    height: 100vh; 
     display: flex; 
     flex-direction: column; 
-} 
+    font-family: 'Poppins', sans-serif;    
+    background-color: #ffffff;
+    color: #000000;
+}
+
+
+.text {
+    position: relative;
+    width: 100%;
+    height: 100vh; 
+}
+
+
+.text-container {
+    position: absolute;
+    top: 40%;             
+    right: 60px;         
+    transform: translateY(-50%);
+    background-color: white; 
+    padding: 25px 35px;
+    border-radius: 12px;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.15);
+    width: 35%; 
+}
+
+
+.text-container h2 {
+    font-size: 28px;
+    margin-bottom: 15px;
+}
+
+/* Highlighted words */
+.text-container span {
+    color: orange;
+    font-weight: bold;
+    transition: 0.3s;
+}
+
+
+/* Paragraph text */
+.text-container p {
+    font-size: 16px;
+    line-height: 1.6;
+    color: #444;
+}
+
 
 .image-container img{ 
     width: 250px; 
@@ -12,18 +57,18 @@ body{
 } 
 
 .image-container { 
-    position: fixed; 
+    position: absolute; 
     left: 5%;
     padding: 20vh 70px; 
 } 
 .circle{ 
     background-color: rgb(255, 153, 0); 
-    width: 30px; 
-    height: 30px; 
+    width: 20px; 
+    height: 20px; 
     border-radius:100px; 
     top:70%; 
     left: 50%; 
-    position:fixed; 
+    position:absolute; 
 } 
 .circle1 { 
     background-color: orange; 
@@ -32,14 +77,14 @@ body{
     border-radius: 100px; 
     top: 15%; 
     left: 20%; 
-    position:fixed; 
+    position:absolute; 
 } 
 .circle2{ 
     background-color: orange; 
-    width: 20px; 
-    height: 20px; 
+    width: 10px; 
+    height: 10px; 
     border-radius: 100px; 
     top: 30%; 
     left: 5%; 
-    position:fixed;
+    position:absolute;
 }
